Refactor project pages and contact form: Remove emojis from titles and buttons, update translations, enhance dark mode background, and improve CSS styles for a cleaner look.

--- a/cv.html
+++ b/cv.html
@@ -21,12 +21,12 @@
         <li><a href="index.html#projects" data-i18n="navProjects">Projekte</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
         <li><a href="kontakt.html" data-i18n="navContact">Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">LinkedIn</a></li>
       </ul>
       
       <div class="nav-controls">
-        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">🌙 Dark Mode</button>
-        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">🇬🇧 English</button>
+        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">Dark Mode</button>
+        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">English</button>
       </div>
     </nav>
   </header>
@@ -34,11 +34,11 @@
   <!-- Main Content -->
   <main class="content">
     <div class="project-detail" data-aos="fade-up">
-      <h1 data-i18n="cvTitle">📄 Lebenslauf</h1>
+      <h1 data-i18n="cvTitle">Lebenslauf</h1>
 
       <!-- Ausbildung -->
       <section class="cv-section">
-        <h2 data-i18n="cvEducationTitle">🎓 Ausbildung</h2>
+        <h2 data-i18n="cvEducationTitle">Ausbildung</h2>
         <div class="cv-item">
           <h3 data-i18n="cvEducationDegree">Bachelor of Science, Angewandte Informatik</h3>
           <p data-i18n="cvEducationSchool">HTWG Konstanz</p>
@@ -49,7 +49,7 @@
 
       <!-- Praxiserfahrung -->
       <section class="cv-section">
-        <h2 data-i18n="cvExperienceTitle">💼 Praxiserfahrung</h2>
+        <h2 data-i18n="cvExperienceTitle">Praxiserfahrung</h2>
         <div class="cv-item">
           <p data-i18n="cvExperiencePlaceholder">Praxissemester und berufliche Stationen (Platzhalter für eigene Inhalte)</p>
           <p data-i18n="cvExperienceDescription">Hier kannst du dein Praxissemester, Werkstudententätigkeiten oder andere berufliche Erfahrungen eintragen. Beschreibe kurz deine Aufgaben, verwendete Technologien und was du dabei gelernt hast.</p>
@@ -58,7 +58,7 @@
 
       <!-- Skills -->
       <section class="cv-section">
-        <h2 data-i18n="cvSkillsTitle">🛠️ Technische Skills</h2>
+        <h2 data-i18n="cvSkillsTitle">Technische Skills</h2>
         <div class="badges">
           <span class="badge">C</span>
           <span class="badge">C++</span>
@@ -74,8 +74,8 @@
 
       <!-- Actions -->
       <div class="cv-actions">
-        <a href="assets/CV_Marcel_Richter.pdf" class="btn btn-primary" download data-i18n="cvDownload">📥 CV als PDF herunterladen</a>
-        <a href="kontakt.html" class="btn btn-secondary" data-i18n="cvContactBtn">📫 Kontakt aufnehmen</a>
+        <a href="assets/CV_Marcel_Richter.pdf" class="btn btn-primary" download data-i18n="cvDownload">CV als PDF herunterladen</a>
+        <a href="kontakt.html" class="btn btn-secondary" data-i18n="cvContactBtn">Kontakt aufnehmen</a>
       </div>
     </div>
   </main>
@@ -86,8 +86,8 @@
       <ul class="footer-links">
         <li><a href="index.html" data-i18n="navHome">Start</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
-        <li><a href="kontakt.html" data-i18n="footerContact">📫 Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="kontakt.html" data-i18n="footerContact">Kontakt</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">LinkedIn</a></li>
       </ul>
       <div class="footer-legal">
         <a href="impressum.html" data-i18n="footerImpressum">Impressum</a>
