--- a/projekt-can.html
+++ b/projekt-can.html
@@ -21,12 +21,12 @@
         <li><a href="index.html#projects" data-i18n="navProjects">Projekte</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
         <li><a href="kontakt.html" data-i18n="navContact">Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">LinkedIn</a></li>
       </ul>
       
       <div class="nav-controls">
-        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">🌙 Dark Mode</button>
-        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">🇬🇧 English</button>
+        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">Dark Mode</button>
+        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">English</button>
       </div>
     </nav>
   </header>
@@ -42,13 +42,13 @@
 
       <!-- Ziel -->
       <section class="project-section">
-        <h2 data-i18n="projectGoalTitle">🎯 Ziel</h2>
+        <h2 data-i18n="projectGoalTitle">Ziel</h2>
         <p data-i18n="projectCANGoal">Das Projekt beschäftigt sich mit der Erfassung von Temperaturdaten und deren Austausch zwischen mehreren Knoten über einen CAN-Bus. Der Fokus liegt auf einem strukturierten Nachrichtenformat, nachvollziehbarem Logging und sicherer Fehlerbehandlung bei Kommunikationsproblemen.</p>
       </section>
 
       <!-- Mein Beitrag -->
       <section class="project-section">
-        <h2 data-i18n="projectContributionTitle">🔧 Mein Beitrag</h2>
+        <h2 data-i18n="projectContributionTitle">Mein Beitrag</h2>
         <ul>
           <li data-i18n="projectCANContrib1">Definition eines strukturierten Nachrichtenformats für Sensordaten</li>
           <li data-i18n="projectCANContrib2">Implementierung der CAN-Schnittstelle und Fehlerbehandlung</li>
@@ -58,7 +58,7 @@
 
       <!-- Tech Stack -->
       <section class="project-section">
-        <h2 data-i18n="projectTechTitle">💻 Tech Stack</h2>
+        <h2 data-i18n="projectTechTitle">Tech Stack</h2>
         <div class="badges">
           <span class="badge">C</span>
           <span class="badge">CAN Bus</span>
@@ -71,13 +71,13 @@
 
       <!-- Umsetzung -->
       <section class="project-section">
-        <h2 data-i18n="projectImplementationTitle">⚙️ Umsetzung</h2>
+        <h2 data-i18n="projectImplementationTitle">Umsetzung</h2>
         <p data-i18n="projectCANImplementation">Die Umsetzung begann mit der Definition des Nachrichtenformats. Es wurde ein einfaches Protokoll definiert, das Sensor-ID, Temperaturwert und Checksumme enthält. Die CAN-Schnittstelle wurde konfiguriert und ein Empfangs- und Sendemechanismus implementiert. Besonderes Augenmerk wurde auf Fehlerszenarien wie verlorene Nachrichten und falsche Checksummen gelegt. Ein Logging-System protokolliert alle Nachrichten und Fehler für spätere Analyse.</p>
       </section>
 
       <!-- Screenshots -->
       <section class="project-section">
-        <h2 data-i18n="projectScreenshotsTitle">📸 Screenshots</h2>
+        <h2 data-i18n="projectScreenshotsTitle">Screenshots</h2>
         <div class="project-screenshot">
           [Screenshot Platzhalter: CAN-Bus Analyzer oder Logging-Ausgabe]
         </div>
@@ -85,7 +85,7 @@
 
       <!-- Lessons Learned -->
       <section class="project-section">
-        <h2 data-i18n="projectLessonsTitle">📚 Lessons Learned</h2>
+        <h2 data-i18n="projectLessonsTitle">Lessons Learned</h2>
         <ul>
           <li data-i18n="projectCANLesson1">Strukturierte Nachrichtenformate erleichtern Debugging und Wartung.</li>
           <li data-i18n="projectCANLesson2">Logging ist unverzichtbar für die Analyse von Kommunikationsproblemen.</li>
@@ -94,7 +94,7 @@
 
       <!-- Links -->
       <section class="project-section">
-        <h2 data-i18n="projectLinksTitle">🔗 Links</h2>
+        <h2 data-i18n="projectLinksTitle">Links</h2>
         <div class="project-links">
           <a href="#" class="btn btn-secondary" data-i18n="projectRepo">GitHub Repository</a>
           <a href="#" class="btn btn-secondary" data-i18n="projectDemo">Live Demo</a>
@@ -104,7 +104,7 @@
       <!-- Navigation -->
       <nav class="project-nav">
         <a href="index.html#projects" class="btn btn-secondary" data-i18n="projectBackToProjects">← Zurück zu Projekten</a>
-        <a href="kontakt.html" class="btn btn-primary" data-i18n="projectContactCTA">📫 Kontakt</a>
+        <a href="kontakt.html" class="btn btn-primary" data-i18n="projectContactCTA">Kontakt</a>
       </nav>
     </article>
   </main>
@@ -115,8 +115,8 @@
       <ul class="footer-links">
         <li><a href="index.html" data-i18n="navHome">Start</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
-        <li><a href="kontakt.html" data-i18n="footerContact">📫 Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="kontakt.html" data-i18n="footerContact">Kontakt</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">LinkedIn</a></li>
       </ul>
       <div class="footer-legal">
         <a href="impressum.html" data-i18n="footerImpressum">Impressum</a>
