--- a/projekt-iot.html
+++ b/projekt-iot.html
@@ -21,12 +21,12 @@
         <li><a href="index.html#projects" data-i18n="navProjects">Projekte</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
         <li><a href="kontakt.html" data-i18n="navContact">Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">LinkedIn</a></li>
       </ul>
       
       <div class="nav-controls">
-        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">🌙 Dark Mode</button>
-        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">🇬🇧 English</button>
+        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">Dark Mode</button>
+        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">English</button>
       </div>
     </nav>
   </header>
@@ -42,13 +42,13 @@
 
       <!-- Ziel -->
       <section class="project-section">
-        <h2 data-i18n="projectGoalTitle">🎯 Ziel</h2>
+        <h2 data-i18n="projectGoalTitle">Ziel</h2>
         <p data-i18n="projectIoTGoal">Das Projekt befasst sich mit der Erfassung von Sensordaten, ihrer Verarbeitung und Übertragung. Der Fokus liegt auf einer robusten Kommunikation und einer sauberen, wartbaren Code-Struktur. Das System soll Messwerte zuverlässig erfassen und Status-Informationen bereitstellen, auch bei einfachen Fehlerszenarien.</p>
       </section>
 
       <!-- Mein Beitrag -->
       <section class="project-section">
-        <h2 data-i18n="projectContributionTitle">🔧 Mein Beitrag</h2>
+        <h2 data-i18n="projectContributionTitle">Mein Beitrag</h2>
         <ul>
           <li data-i18n="projectIoTContrib1">Implementierung der Sensor-Schnittstelle und Datenerfassung</li>
           <li data-i18n="projectIoTContrib2">Entwicklung eines Protokolls zur strukturierten Datenübertragung</li>
@@ -58,7 +58,7 @@
 
       <!-- Tech Stack -->
       <section class="project-section">
-        <h2 data-i18n="projectTechTitle">💻 Tech Stack</h2>
+        <h2 data-i18n="projectTechTitle">Tech Stack</h2>
         <div class="badges">
           <span class="badge">C / C++</span>
           <span class="badge">Mikrocontroller</span>
@@ -70,13 +70,13 @@
 
       <!-- Umsetzung -->
       <section class="project-section">
-        <h2 data-i18n="projectImplementationTitle">⚙️ Umsetzung</h2>
+        <h2 data-i18n="projectImplementationTitle">Umsetzung</h2>
         <p data-i18n="projectIoTImplementation">Die Umsetzung erfolgte in mehreren Schritten. Zunächst wurde der Sensor angebunden und die Datenerfassung implementiert. Anschließend wurde ein einfaches Protokoll definiert, um die Daten strukturiert zu übertragen. Die Fehlerbehandlung umfasst Timeouts, Checksummen und defensive Programmierung. Der Code wurde modular aufgebaut, um Wartbarkeit und Erweiterbarkeit zu gewährleisten.</p>
       </section>
 
       <!-- Screenshots -->
       <section class="project-section">
-        <h2 data-i18n="projectScreenshotsTitle">📸 Screenshots</h2>
+        <h2 data-i18n="projectScreenshotsTitle">Screenshots</h2>
         <div class="project-screenshot">
           [Screenshot Platzhalter: System-Architektur oder Messwerte-Ausgabe]
         </div>
@@ -84,7 +84,7 @@
 
       <!-- Lessons Learned -->
       <section class="project-section">
-        <h2 data-i18n="projectLessonsTitle">📚 Lessons Learned</h2>
+        <h2 data-i18n="projectLessonsTitle">Lessons Learned</h2>
         <ul>
           <li data-i18n="projectIoTLesson1">Defensive Programmierung bei hardwarenaher Entwicklung zahlt sich aus.</li>
           <li data-i18n="projectIoTLesson2">Strukturierte Fehlerbehandlung erleichtert das Debugging erheblich.</li>
@@ -93,7 +93,7 @@
 
       <!-- Links -->
       <section class="project-section">
-        <h2 data-i18n="projectLinksTitle">🔗 Links</h2>
+        <h2 data-i18n="projectLinksTitle">Links</h2>
         <div class="project-links">
           <a href="#" class="btn btn-secondary" data-i18n="projectRepo">GitHub Repository</a>
           <a href="#" class="btn btn-secondary" data-i18n="projectDemo">Live Demo</a>
@@ -103,7 +103,7 @@
       <!-- Navigation -->
       <nav class="project-nav">
         <a href="index.html#projects" class="btn btn-secondary" data-i18n="projectBackToProjects">← Zurück zu Projekten</a>
-        <a href="kontakt.html" class="btn btn-primary" data-i18n="projectContactCTA">📫 Kontakt</a>
+        <a href="kontakt.html" class="btn btn-primary" data-i18n="projectContactCTA">Kontakt</a>
       </nav>
     </article>
   </main>
@@ -114,8 +114,8 @@
       <ul class="footer-links">
         <li><a href="index.html" data-i18n="navHome">Start</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
-        <li><a href="kontakt.html" data-i18n="footerContact">📫 Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="kontakt.html" data-i18n="footerContact">Kontakt</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">LinkedIn</a></li>
       </ul>
       <div class="footer-legal">
         <a href="impressum.html" data-i18n="footerImpressum">Impressum</a>
