--- a/danke.html
+++ b/danke.html
@@ -20,12 +20,12 @@
         <li><a href="index.html#projects" data-i18n="navProjects">Projekte</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
         <li><a href="kontakt.html" data-i18n="navContact">Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">LinkedIn</a></li>
       </ul>
       
       <div class="nav-controls">
-        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">🌙 Dark Mode</button>
-        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">🇬🇧 English</button>
+        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">Dark Mode</button>
+        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">English</button>
       </div>
     </nav>
   </header>
@@ -33,16 +33,16 @@
   <!-- Main Content -->
   <main>
     <div class="thank-you-container">
-      <h1 data-i18n="thankYouTitle">✅ Danke für deine Nachricht</h1>
+      <h1 data-i18n="thankYouTitle">Danke für deine Nachricht</h1>
       
       <p data-i18n="thankYouMessage">
         Ich habe deine Nachricht erhalten und melde mich so bald wie möglich.
       </p>
 
       <div class="thank-you-links">
-        <a href="index.html" class="btn btn-primary" data-i18n="thankYouHome">🏠 Zur Startseite</a>
-        <a href="kontakt.html" class="btn btn-secondary" data-i18n="thankYouContact">📫 Noch eine Nachricht</a>
-        <a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" class="btn btn-secondary" data-i18n="thankYouLinkedIn">💼 LinkedIn</a>
+        <a href="index.html" class="btn btn-primary" data-i18n="thankYouHome">Zur Startseite</a>
+        <a href="kontakt.html" class="btn btn-secondary" data-i18n="thankYouContact">Noch eine Nachricht</a>
+        <a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" class="btn btn-secondary" data-i18n="thankYouLinkedIn">LinkedIn</a>
       </div>
     </div>
   </main>
@@ -53,8 +53,8 @@
       <ul class="footer-links">
         <li><a href="index.html" data-i18n="navHome">Start</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
-        <li><a href="kontakt.html" data-i18n="footerContact">📫 Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="kontakt.html" data-i18n="footerContact">Kontakt</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">LinkedIn</a></li>
       </ul>
       <div class="footer-legal">
         <a href="impressum.html" data-i18n="footerImpressum">Impressum</a>
