--- a/projekt-embedded.html
+++ b/projekt-embedded.html
@@ -21,12 +21,12 @@
         <li><a href="index.html#projects" data-i18n="navProjects">Projekte</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
         <li><a href="kontakt.html" data-i18n="navContact">Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">LinkedIn</a></li>
       </ul>
       
       <div class="nav-controls">
-        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">🌙 Dark Mode</button>
-        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">🇬🇧 English</button>
+        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">Dark Mode</button>
+        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">English</button>
       </div>
     </nav>
   </header>
@@ -42,13 +42,13 @@
 
       <!-- Ziel -->
       <section class="project-section">
-        <h2 data-i18n="projectGoalTitle">🎯 Ziel</h2>
+        <h2 data-i18n="projectGoalTitle">Ziel</h2>
         <p data-i18n="projectEmbeddedGoal">Entwicklung einer hardwarenahen Anwendung mit präzisem Timing. Das Projekt soll Interrupts, Timer und eine Zustandsmaschine nutzen, um echtzeitnahes Verhalten zu erreichen. Der Fokus liegt auf nachvollziehbarer Struktur und systematischem Debugging.</p>
       </section>
 
       <!-- Mein Beitrag -->
       <section class="project-section">
-        <h2 data-i18n="projectContributionTitle">🔧 Mein Beitrag</h2>
+        <h2 data-i18n="projectContributionTitle">Mein Beitrag</h2>
         <ul>
           <li data-i18n="projectEmbeddedContrib1">Design und Implementierung einer ereignisgesteuerten Zustandsmaschine</li>
           <li data-i18n="projectEmbeddedContrib2">Konfiguration von Interrupts und Hardware-Timern</li>
@@ -58,7 +58,7 @@
 
       <!-- Tech Stack -->
       <section class="project-section">
-        <h2 data-i18n="projectTechTitle">💻 Tech Stack</h2>
+        <h2 data-i18n="projectTechTitle">Tech Stack</h2>
         <div class="badges">
           <span class="badge">C</span>
           <span class="badge">Mikrocontroller</span>
@@ -71,13 +71,13 @@
 
       <!-- Umsetzung -->
       <section class="project-section">
-        <h2 data-i18n="projectImplementationTitle">⚙️ Umsetzung</h2>
+        <h2 data-i18n="projectImplementationTitle">Umsetzung</h2>
         <p data-i18n="projectEmbeddedImplementation">Die Umsetzung begann mit der Definition der Zustandsmaschine und der benötigten Events. Anschließend wurden die Hardware-Timer konfiguriert und Interrupt-Handler implementiert. Besonderes Augenmerk wurde auf minimale Interrupt-Laufzeiten und sichere Datenübergabe zwischen Interrupt- und Hauptkontext gelegt. Das Debugging erfolgte durch gezielte Logausgaben und Messungen mit dem Oszilloskop.</p>
       </section>
 
       <!-- Screenshots -->
       <section class="project-section">
-        <h2 data-i18n="projectScreenshotsTitle">📸 Screenshots</h2>
+        <h2 data-i18n="projectScreenshotsTitle">Screenshots</h2>
         <div class="project-screenshot">
           [Screenshot Platzhalter: Zustandsdiagramm oder Oszilloskop-Aufnahme]
         </div>
@@ -85,7 +85,7 @@
 
       <!-- Lessons Learned -->
       <section class="project-section">
-        <h2 data-i18n="projectLessonsTitle">📚 Lessons Learned</h2>
+        <h2 data-i18n="projectLessonsTitle">Lessons Learned</h2>
         <ul>
           <li data-i18n="projectEmbeddedLesson1">Klare Trennung zwischen Interrupt- und Hauptkontext ist essentiell.</li>
           <li data-i18n="projectEmbeddedLesson2">Zustandsmaschinen machen komplexe Abläufe nachvollziehbar und testbar.</li>
@@ -94,7 +94,7 @@
 
       <!-- Links -->
       <section class="project-section">
-        <h2 data-i18n="projectLinksTitle">🔗 Links</h2>
+        <h2 data-i18n="projectLinksTitle">Links</h2>
         <div class="project-links">
           <a href="#" class="btn btn-secondary" data-i18n="projectRepo">GitHub Repository</a>
           <a href="#" class="btn btn-secondary" data-i18n="projectDemo">Live Demo</a>
@@ -104,7 +104,7 @@
       <!-- Navigation -->
       <nav class="project-nav">
         <a href="index.html#projects" class="btn btn-secondary" data-i18n="projectBackToProjects">← Zurück zu Projekten</a>
-        <a href="kontakt.html" class="btn btn-primary" data-i18n="projectContactCTA">📫 Kontakt</a>
+        <a href="kontakt.html" class="btn btn-primary" data-i18n="projectContactCTA">Kontakt</a>
       </nav>
     </article>
   </main>
@@ -115,8 +115,8 @@
       <ul class="footer-links">
         <li><a href="index.html" data-i18n="navHome">Start</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
-        <li><a href="kontakt.html" data-i18n="footerContact">📫 Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">💼 LinkedIn</a></li>
+        <li><a href="kontakt.html" data-i18n="footerContact">Kontakt</a></li>
+        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">LinkedIn</a></li>
       </ul>
       <div class="footer-legal">
         <a href="impressum.html" data-i18n="footerImpressum">Impressum</a>
