Refactor header structure and load dynamically from _header.html; update navigation links and styles
- Removed static header markup from multiple HTML files and replaced with a placeholder for dynamic loading.
- Implemented a function to fetch and insert the header component into the DOM.
- Updated navigation links in translations for consistency with the portfolio theme.
- Adjusted CSS media queries to improve responsiveness and maintain design integrity across devices.
- Enhanced color scheme and styles for buttons and navigation elements.

--- a/_header.html
+++ b/_header.html
@@ -12,8 +12,7 @@
     </div>
 
     <ul class="nav-links">
-      <li><a href="index.html" data-i18n="navHome">Start</a></li>
-      <li><a href="index.html#projects" data-i18n="navProjects">Projekte</a></li>
+      <li><a href="index.html" data-i18n="navHome">Portfolio</a></li>
       <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
       <li><a href="kontakt.html" data-i18n="navContact">Kontakt</a></li>
       <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">LinkedIn</a></li>
@@ -33,8 +32,7 @@
     </button>
 
     <ul class="mobile-menu-links">
-      <li><a href="index.html" data-i18n="navHome">Start</a></li>
-      <li><a href="index.html#projects" data-i18n="navProjects">Projekte</a></li>
+      <li><a href="index.html" data-i18n="navHome">Portfolio</a></li>
       <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
       <li><a href="kontakt.html" data-i18n="navContact">Kontakt</a></li>
       <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">LinkedIn</a></li>
