--- a/mobile-test.html
+++ b/mobile-test.html
@@ -54,46 +54,7 @@
   </style>
 </head>
 <body>
-  <header class="site-header">
-    <nav class="nav-container">
-      <a href="index.html" class="nav-logo">Mobile Test</a>
-
-      <div class="nav-mobile-controls">
-        <button id="hamburger" class="hamburger" aria-label="Menu" aria-controls="mobileMenu" aria-expanded="false">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-      </div>
-
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="mobile-test.html" class="active">Test</a></li>
-      </ul>
-
-      <div class="nav-controls">
-        <button id="darkModeToggle" class="toggle-btn">Dark Mode</button>
-        <button id="languageToggle" class="toggle-btn">English</button>
-      </div>
-    </nav>
-
-    <div id="mobileOverlay" class="mobile-overlay"></div>
-
-    <div id="mobileMenu" class="mobile-menu" aria-hidden="true">
-      <ul class="mobile-menu-links">
-        <li><a href="index.html">Start</a></li>
-        <li><a href="cv.html">Lebenslauf</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
-        <li><a href="projekt-iot.html">IoT Projekt</a></li>
-        <li><a href="mobile-test.html">Mobile Test</a></li>
-      </ul>
-
-      <div class="mobile-controls">
-        <button id="mobileDarkToggle" class="toggle-btn">Dark Mode</button>
-        <button id="mobileLangToggle" class="toggle-btn">English</button>
-      </div>
-    </div>
-  </header>
+  <div id="header-placeholder"></div>
 
   <main class="content">
     <div class="status-box">
