--- a/index.html
+++ b/index.html
@@ -15,53 +15,7 @@
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-  <header class="site-header">
-    <nav class="nav-container">
-      <a href="index.html" class="nav-logo">Marcel Richter</a>
-
-      <div class="nav-mobile-controls">
-        <button id="hamburger" class="hamburger" aria-label="Menu" aria-controls="mobileMenu" aria-expanded="false">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-      </div>
-
-      <ul class="nav-links">
-        <li><a href="index.html" data-i18n="navHome">Start</a></li>
-        <li><a href="index.html#projects" data-i18n="navProjects">Projekte</a></li>
-        <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
-        <li><a href="kontakt.html" data-i18n="navContact">Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">LinkedIn</a></li>
-      </ul>
-
-      <div class="nav-controls">
-        <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">Dark Mode</button>
-        <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">English</button>
-      </div>
-    </nav>
-
-    <div id="mobileOverlay" class="mobile-overlay"></div>
-
-    <div id="mobileMenu" class="mobile-menu" role="dialog" aria-modal="true" aria-label="Mobile Navigation">
-      <button id="mobileMenuClose" class="mobile-menu-close" aria-label="Menü schließen" role="button" tabindex="0">
-        <span class="visually-hidden">Schließen</span>
-      </button>
-
-      <ul class="mobile-menu-links">
-        <li><a href="index.html" data-i18n="navHome">Start</a></li>
-        <li><a href="index.html#projects" data-i18n="navProjects">Projekte</a></li>
-        <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
-        <li><a href="kontakt.html" data-i18n="navContact">Kontakt</a></li>
-        <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="navLinkedIn">LinkedIn</a></li>
-      </ul>
-
-      <div class="mobile-controls">
-        <button id="mobileDarkToggle" class="toggle-btn" aria-label="Dark Mode umschalten">Dark Mode</button>
-        <button id="mobileLangToggle" class="toggle-btn" aria-label="Sprache wechseln">English</button>
-      </div>
-    </div>
-  </header>
+  <div id="header-placeholder"></div>
 
   <section class="hero-section">
     <div class="hero-content glass" data-aos="fade-up">
@@ -221,7 +175,7 @@
   <footer class="site-footer">
     <div class="footer-content">
       <ul class="footer-links">
-        <li><a href="index.html" data-i18n="navHome">Start</a></li>
+        <li><a href="index.html" data-i18n="navHome">Portfolio</a></li>
         <li><a href="cv.html" data-i18n="navCV">Lebenslauf</a></li>
         <li><a href="kontakt.html" data-i18n="footerContact">Kontakt</a></li>
         <li><a href="https://www.linkedin.com/in/marcel-ric/" target="_blank" rel="noopener" data-i18n="footerLinkedIn">LinkedIn</a></li>
